[project]
name = "smtp-proxy-server"
version = "0.1.0"
description = "SMTP/IMAP proxy server for cloudflare temp email"
requires-python = ">=3.11"
dependencies = [
    "aiosmtpd==1.4.6",
    "pydantic-settings==2.14.2",
    "Twisted==26.4.0",
    "httpx==0.28.1",
    "pyOpenSSL==26.0.0",
    "service-identity==24.2.0",
]

[tool.uv]
package = false
